@@ -41,6 +41,10 @@ additional tests:
   Tests whether the attachment is being uploaded by a user with the
   specified username. If openid is enabled, an openid can also be put here.
 
+* adminuser()
+
+  Tests whether the attachment is being uploded by one of the wiki admins.
+
 * ip(address)
 
   Tests whether the attacment is being uploaded from the specified IP
