@@ -3,6 +3,8 @@ ikiwiki (2.66) UNRELEASED; urgency=low
   * recentchanges: Fix redirects to non-page files. 
   * aggregate: Avoid uninitialized value warnings for pages with no recorded
     ctime.
+  * attachment: Add admin() pagespec to test if the uploading user is a wiki
+    admin.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 25 Sep 2008 13:45:55 -0400
 
